# wingpanel-indicator-places

./: .gitignore  README.md  io.github.elly-code.wingpanel-indicator-places_3.1.0_amd64.deb  io.github.elly-code.wingpanel-indicator-places_3.2.0_amd64.deb  meson.build
data/: meson.build  places.gschema.xml
debian/: changelog  control  debhelper-build-stamp  files
po/: POTFILES  de.po  fr.po  places.pot  ru.po  sv.po  wingpanel-indicator-places.pot
src/: Indicator.vala  Utils.vala
src/Enums/: MountClass.vala  StandardPlaces.vala
src/Views/: Bookmarks.vala  Standard.vala  VolumeAndMounts.vala
src/Widgets/: BookmarksItem.vala  ListItem.vala  MountItem.vala  Popover.vala  StandardItem.vala  VolumeItem.vala
